<resources>
    <string name="app_name">Messenger</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="messaging">Messaging</string>
    <string name="signin">Sign in</string>
    <string name="signnup">Sign up</string>
    <string name="sender">Sender ID</string>
    <string name="receiver">Receiver ID</string>
    <string name="content">Text content</string>
    <string name="send">Send</string>
    <string name="sentdate">Sent Date</string>
    <string name="call">Call</string>
    <string name="enter_message">Enter message</string>
    <string name="open">Messenger</string>
    <string name="close">Messenger</string>
</resources>
